--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
 <nav>
-    <a href="#intro">intro</a>
-    <a href="#projects">projects</a>
-    <a href="#contact">contact</a>
+    <a href="#intro" class="active" data-text="intro">intro</a>
+    <a href="#projects" data-text="projects">projects</a>
+    <a href="#contact" data-text="contact">contact</a>
 </nav>
 
 <div id="app"></div>
