Animations revamp * Rolled back to velocity@1.5.2 (2.0.2 didn't support scrollTop, ^2.0.2 didn't support easing, will have to upgrade later when more stable versions are published) * Added flashrogers font to master * Added a line-break for intro text for mobile devices * Only launches mousemove tracking for devices 1024px+ * Little work on project-controls ('Previous' won't show on first project) * Changed how transform, resize & leftovers are being handled (now uses Velocity with forcefeeding) * Changed some animation durations (just a little tweak) * Added dummy content to other projects * Added skeletal mobile support * Changed section swapping to also use Velocity animations instead of changing in-line css styles * Get this navigation together ...

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
 <nav>
-    <a href="#intro" class="active" data-text="intro">intro</a>
-    <a href="#projects" data-text="projects">projects</a>
-    <a href="#contact" data-text="contact">contact</a>
+    <a href="#intro" class="active" data-text="intro">Intro</a>
+    <a href="#projects" data-text="projects">Projects</a>
+    <a href="#contact" data-text="contact">Contact</a>
 </nav>
 
 <div id="app"></div>
