--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -11,6 +11,7 @@
 
 <body>
 
+<div class="loader"></div>
 <div id="app"></div>
 
 <link rel="stylesheet" href="style.css">
