Removed resize handler :/ * Resize handler was buggy and caused glitches when mobile navbar went up/down * Added google translate meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="google" content="notranslate">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="theme-color" content="#24292e">
     <meta name="msapplication-TileColor" content="#603cba">
