Google search console verification

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="google" content="notranslate">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="theme-color" content="#24292e">
     <meta name="msapplication-TileColor" content="#603cba">
-    <title>Pawel Czarniecki - Front-end developer</title>
-    <meta name="description" content="I'm a passion driven, music infused front-end developer building eye satisfying, minimalistic websites & user-friendly experiences">
+    <title>Pawel Czarniecki - Front-end Developer</title>
+    <meta name="description" content="Passion driven, music infused front-end developer building eye satisfying, minimalistic websites & user-friendly experiences">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
