Performance and best practices polishing * Changed production webpack build to use splitChunks * Added titles and descriptions to links * Lazyloading projects now doesn't instantly load first 3 projects on page load * Added image lazyload to my photo in contact section * Added 25% opacity bg to navbar * Added rel='noopener' to project links * Added custom scrollbar * Added google translate meta tag and language tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en" xml:lang="en" xmlns= "http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="theme-color" content="#24292e">
+    <meta http-equiv="Content-Language" content="en">
+    <meta name="google" content="notranslate">
+    <meta name="theme-color" content="#373737">
     <meta name="msapplication-TileColor" content="#603cba">
     <title>Pawel Czarniecki - Front-end Developer</title>
     <meta name="description" content="Passion driven, music infused front-end developer building eye satisfying, minimalistic websites & user-friendly experiences">
