--- a/index.html
+++ b/index.html
@@ -20,4 +20,14 @@
 
 </body>
 
+<script>
+    // Check that service workers are registered
+    if ('serviceWorker' in navigator) {
+        // Use the window load event to keep the page load performance
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/service-worker.js');
+        });
+    }
+</script>
+
 </html>
