Small fix & G suite * Added google page verification * Removed padding between boxes on desktop * Added bigger border on projects on desktop * Made the project description bigger

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Pawel Czarniecki - Front-end Developer</title>
     <meta name="description" content="Passion driven, music infused front-end developer building eye satisfying, minimalistic websites & user-friendly experiences">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="26KMEMAcsMseDzbYygnqef4yfGfWokfXioCLaJLdG7g" />
 </head>
 
 <body>
